@@ -84,6 +84,11 @@ Define Maven Mojos and Javadoc taglets for generating resource files
       <artifactId>maven-plugin-api</artifactId>
       <version>3.0.5</version>
     </dependency>
+     <dependency>
+      <groupId>org.sonatype.plexus</groupId>
+      <artifactId>plexus-build-api</artifactId>
+      <version>0.0.7</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
